--- a/appfront/src/templates/index.html
+++ b/appfront/src/templates/index.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <script src="//unpkg.com/iview/dist/iview.min.js"></script>
-    <title>appfront</title>
-  </head>
-  <body>
-    <div id="app"> </div>
-    <!-- built files will be auto injected -->
-  <template>
-      <Input v-model="value" placeholder="Enter something..." style="width: 300px" />
-  </template>
-  <script>
-    export default {
-        data () {
-            return {
-                value: ''
+    <title>iview example</title>
+    <link rel="stylesheet" type="text/css" href="http://unpkg.com/iview/dist/styles/iview.css">
+    <script type="text/javascript" src="http://vuejs.org/js/vue.min.js"></script>
+    <script type="text/javascript" src="http://unpkg.com/iview/dist/iview.min.js"></script>
+</head>
+<body>
+<div id="app">
+    <i-button @click="show">Click me!</i-button>
+    <Modal v-model="visible" title="Welcome">Welcome to iView</Modal>
+</div>
+<script>
+    new Vue({
+        el: '#app',
+        data: {
+            visible: false
+        },
+        methods: {
+            show: function () {
+                this.visible = true;
             }
         }
-    }
+    })
   </script>
-  </body>
+</body>
 </html>
