--- a/appfront/src/components/login-out/login-out.less
+++ b/appfront/src/components/login-out/login-out.less
@@ -2,8 +2,8 @@
   &-avator-dropdown{
     cursor: pointer;
     display: inline-block;
-    // height: 64px;
+    height: 164px;
     vertical-align: middle;
-    // line-height: 64px;
+    line-height: 654px;
   }
 }
