--- a/appfront/src/components/main/mains.less
+++ b/appfront/src/components/main/mains.less
@@ -7,10 +7,10 @@
     overflow: hidden;
 }
 .header-con{
-  background: #2d8cf0
+  background: #fff
 }
 .menu-con{
-  background: #2d8cf0
+  background: #fff
 }
 .layout-logo{
     width: 100px;
@@ -23,9 +23,9 @@
     left: 20px;
 }
 .layout-nav{
-    width: 420px;
+    width: 680px;
     margin: 0 auto;
-    margin-right: 20px;
+    margin-right: 0px;
 }
 .layout-footer-center{
     text-align: center;
