packagegood create and delete

--- a/appfront/src/components/main/mains.less
+++ b/appfront/src/components/main/mains.less
@@ -15,7 +15,7 @@
 .layout-logo{
     width: 100px;
     height: 30px;
-    background: #2d8cf0;
+    //background: #2d8cf0;
     border-radius: 3px;
     float: left;
     position: relative;
