--- a/appfront/src/components/main/mains.less
+++ b/appfront/src/components/main/mains.less
@@ -7,7 +7,14 @@
     overflow: hidden;
 }
 .header-con{
-  background: #fff
+  width: 100%;
+  height: 60px;
+  //position: fixed;
+  background: #fff;
+  //box-shadow: 0 1px 1px rgba(0,0,0,05);
+  top: 0;
+  left: 0;
+  //z-index: 2;
 }
 .menu-con{
   background: #fff
@@ -31,3 +38,6 @@
     text-align: center;
 }
 
+.ivu-menu-horizontal.ivu-menu-light:after {
+  display: none;
+}
