--- a/appfront/src/components/main/mains.less
+++ b/appfront/src/components/main/mains.less
@@ -30,9 +30,9 @@
     left: 20px;
 }
 .layout-nav{
-    width: 780px;
-    margin: 0 auto;
-    margin-right: 0px;
+    width: 980px;
+    //margin: 0 auto;
+    padding-right: 200px;
 }
 .layout-footer-center{
     text-align: center;
