--- a/appfront/src/components/main/mains.less
+++ b/appfront/src/components/main/mains.less
@@ -41,3 +41,9 @@
 .ivu-menu-horizontal.ivu-menu-light:after {
   display: none;
 }
+.notifications {
+  text-align: center;
+  min-height: 150px;
+  max-height: 200px;
+  overflow-y: auto;
+}
