--- a/appfront/src/components/main/mains.less
+++ b/appfront/src/components/main/mains.less
@@ -4,7 +4,12 @@
     background: #f5f7f9;
     position: relative;
     border-radius: 4px;
-    overflow: hidden;
+    overflow: auto;
+}
+.content{
+  height: 100%;
+  overflow-y: scroll;
+  //background: #f8f8f9;
 }
 .header-con{
   width: 100%;
