--- a/appfront/src/components/main/mains.less
+++ b/appfront/src/components/main/mains.less
@@ -1,16 +1,18 @@
 
 .layout{
-    border: 1px solid #d7dde4;
-    background: #f5f7f9;
-    position: relative;
-    border-radius: 4px;
-    overflow: auto;
+    //border: 1px solid #d7dde4;
+    //background: #f5f7f9;
+    //position: relative;
+    //border-radius: 1px;
+    overflow-y: auto;
+    height: 100%;
 }
 .content{
-  height: 100%;
-  overflow-y: scroll;
+  //overflow-y: scroll;
   //background: #f8f8f9;
-  height: 500px;
+  height: 100%;
+  min-height: 500px;
+  margin-bottom: 8px;
 }
 .header-con{
   width: 100%;
@@ -36,7 +38,7 @@
     left: 20px;
 }
 .layout-nav{
-    width: 980px;
+    width: 180px;
     //margin: 0 auto;
     padding-right: 200px;
 }
