--- a/appfront/src/view/login/register.less
+++ b/appfront/src/view/login/register.less
@@ -5,9 +5,12 @@
     background-size: cover;
     background-position: center;
     position: relative;
+    &-card{
+      width: 720px;
+    }
     &-con{
         position: absolute;
-        right: 36%;
+        right: 46%;
         top: 60%;
         transform: translateY(-60%);
         width: 398px;
